force-app/main/default/objects/SSP_TrackDeletion__c/SSP_TrackDeletion__c.object-meta.xml
<CustomObject>
    <description>Stores details of entities deleted by an individual on a case</description>
    <label>SSP TrackDeletion</label>
    <nameField>
        
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        
        <label>SSP_TrackDeletion Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>SSP TrackDeletions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>