force-app/main/default/objects/SSP_TrackDeletion__c/fields/DCId__c.field-meta.xml
<CustomField>
    <fullName>DCId__c</fullName>
    <description>This field is used to store DC Id of deleted record.</description>
    <externalId>true</externalId>
    <label>DC Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>