force-app/main/default/objects/SSP_TrackDeletion__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>This field is used to store End Date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>Date</type>
</CustomField>