force-app/main/default/objects/SSP_TrackDeletion__c/fields/EndReason__c.field-meta.xml
<CustomField>
    <fullName>EndReason__c</fullName>
    <description>This field is used to store reason for removal.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>End Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>