force-app/main/default/objects/SSP_TrackDeletion__c/fields/OtherReason__c.field-meta.xml
<CustomField>
    <fullName>OtherReason__c</fullName>
    <description>This field is used to capture reason if Other is selected.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Other Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>