force-app/main/default/objects/SSP_TrackDeletion__c/fields/ParentDCId__c.field-meta.xml
<CustomField>
    <fullName>ParentDCId__c</fullName>
    <description>If the record deleted is a child record, this field will be used to store DC Id of Parent record.</description>
    <externalId>true</externalId>
    <label>Parent DC Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>