force-app/main/default/objects/SSP_TrackDeletion__c/fields/SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceId__c</fullName>
    <description>This field is used to capture Salesforce Id of record deleted.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Salesforce Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>