force-app/main/default/objects/SSP_TrackDeletion__c/fields/SFObject__c.field-meta.xml
<CustomField>
    <fullName>SFObject__c</fullName>
    <description>object name whose record is being deleted</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SF Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>