force-app/main/default/objects/SSP_TrackDeletion__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>This field is used to capture the screen name from where track deletion record was created.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>