force-app/main/default/objects/SSP_TrackDeletion__c/fields/SSP_Application__c.field-meta.xml
<CustomField>
    <fullName>SSP_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to indicate the related application for Track deletion record</description>
    <label>SSP_Application</label>
    <referenceTo>SSP_Application__c</referenceTo>
    <relationshipName>SSP_TrackDeletions</relationshipName>
    <type>Lookup</type>
</CustomField>