force-app/main/default/objects/SSP_TrackDeletion__c/fields/SSP_Member__c.field-meta.xml
<CustomField>
    <fullName>SSP_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to indicate the related member for Track deletion record</description>
    <label>SSP_Member</label>
    <referenceTo>SSP_Member__c</referenceTo>
    <relationshipName>SSP_TrackDeletions</relationshipName>
    <type>Lookup</type>
</CustomField>