force-app/main/default/objects/SSP_TrackDeletion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SSP_Application__c</columns>
    <columns>SSP_Member__c</columns>
    <columns>Source__c</columns>
    <columns>SalesforceId__c</columns>
    <columns>DCId__c</columns>
    <columns>ParentDCId__c</columns>
    <columns>EndDate__c</columns>
    <columns>EndReason__c</columns>
    <columns>OtherReason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>